--- a/QuizMaster/src/main/resources/com/example/quizmaster/game-view.fxml
+++ b/QuizMaster/src/main/resources/com/example/quizmaster/game-view.fxml
@@ -31,12 +31,11 @@
                <TextField fx:id="playerName" promptText="your name goes here" />
                <Button mnemonicParsing="false" onAction="#onEnterNameButtonClick" text="Submit" />
            </VBox>
-           <Label fx:id="countdownLabel" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
            <VBox fx:id="quizViewBodyBox" alignment="TOP_CENTER" prefHeight="278.0" prefWidth="400.0" spacing="20.0" visible="false" VBox.vgrow="ALWAYS">
                <padding>
                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
-               <GridPane fx:id="quizHeader" prefHeight="40.0" prefWidth="345.0">
+               <GridPane prefHeight="40.0" prefWidth="345.0">
                    <columnConstraints>
                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="235.0" />
                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="168.0" minWidth="10.0" prefWidth="111.0" />
@@ -73,6 +72,7 @@
                </VBox.margin>
             </VBox>
            </VBox>
+         <VBox fx:id="resultsTable" prefHeight="200.0" prefWidth="100.0" />
        </VBox>
    </center>
 </BorderPane>
